--- a/EExamWebApp/Views/Shared/_Layout.cshtml
+++ b/EExamWebApp/Views/Shared/_Layout.cshtml
@@ -23,12 +23,15 @@
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                
+               </ul>  
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink(Session["UserEmail"].ToString(), "Index", "Home", null, new { @style = "pointer-events:none; cursor:default; color:white" })</li>
+                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                    </ul>
                 }
-            </ul>
+           
         </div>
     </div>
 </div>
