assigning students to the course by teacher

--- a/EExamWebApp/Views/Course/Index.cshtml
+++ b/EExamWebApp/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-@model EExamWebApp.Models.User
+@model System.Collections.Generic.List<EExamWebApp.Models.Course>
 
 @{
     ViewBag.Title = "title";
