--- a/EExamWebApp/Views/Shared/_Layout.cshtml
+++ b/EExamWebApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@(ViewBag.Title ?? "Default Title") - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -14,24 +14,23 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span the="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             @Html.ActionLink("E-Exam Application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("Home", "AssignStudents", "Course")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
                 <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-               </ul>  
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>@Html.ActionLink(Session["UserEmail"].ToString(), "Index", "Home", null, new { @style = "pointer-events:none; cursor:default; color:white" })</li>
-                        <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
-                    </ul>
-                }
-           
+            </ul>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@(Session["UserEmail"] != null ? Html.ActionLink(Session["UserEmail"].ToString(), "Index", "Home", null, new { @style = "pointer-events:none; cursor:default; color:white" }) : Html.Raw(""))</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
+                </ul>
+            }
         </div>
     </div>
 </div>
@@ -45,6 +44,7 @@
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 @RenderSection("scripts", required: false)
 </body>
 </html>
