--- a/EExamWebApp/Views/Course/Index.cshtml
+++ b/EExamWebApp/Views/Course/Index.cshtml
@@ -1,4 +1,4 @@
-@model System.Collections.Generic.List<EExamWebApp.Models.Course>
+@model List<EExamWebApp.Models.Course>
 
 @{
     ViewBag.Title = "title";
