--- a/EExamWebApp/Views/Admin/Index.cshtml
+++ b/EExamWebApp/Views/Admin/Index.cshtml
@@ -7,5 +7,5 @@
 
 <h2>title</h2>
 <p>
-    @Html.ActionLink("Create Course", "CreateCourse", "Course", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Create Course", "Create", "Courses", null, new { @class = "btn btn-primary" })
 </p>
