--- a/EExamWebApp/Views/Admin/ListUsers.cshtml
+++ b/EExamWebApp/Views/Admin/ListUsers.cshtml
@@ -8,7 +8,7 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Create Course", "CreateCourse", "Course", null, new { @class = "btn btn-primary" })
+    @Html.ActionLink("Create Course", "Create", "Courses", null, new { @class = "btn btn-primary" })
 </p>
 
 <table class="table">
