--- a/EExamWebApp/Views/Exam/CourseExams.cshtml
+++ b/EExamWebApp/Views/Exam/CourseExams.cshtml
@@ -1,4 +1,4 @@
-@model System.Collections.Generic.List<EExamWebApp.Models.Exam>
+@model List<EExamWebApp.Models.Exam>
 
 @{
     ViewBag.Title = "title";
@@ -6,4 +6,3 @@
 }
 
 <h2>title</h2>
-
