--- a/EExamWebApp/Views/Questions/Delete.cshtml
+++ b/EExamWebApp/Views/Questions/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model EExamWebApp.Models.Question
+﻿@using System.Web.UI.WebControls
+@model EExamWebApp.Models.Question
 
 @{
     ViewBag.Title = "Delete";
@@ -28,7 +29,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default"/> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index"  , new { examId = ViewBag.ExamId})
         </div>
     }
 </div>
