--- a/EExamWebApp/Views/Course/Index.cshtml
+++ b/EExamWebApp/Views/Course/Index.cshtml
@@ -1,8 +1,8 @@
-@model List<EExamWebApp.Models.Course>
-
-@{
-    ViewBag.Title = "title";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<h2>title</h2>
+@* @model List<EExamWebApp.Models.Course> *@
+@* *@
+@* @{ *@
+@*     ViewBag.Title = "title"; *@
+@*     Layout = "~/Views/Shared/_Layout.cshtml"; *@
+@* } *@
+@* *@
+@* <h2>title</h2> *@
