--- a/EExamWebApp/Views/Course/_CurrentStudentsPartial.cshtml
+++ b/EExamWebApp/Views/Course/_CurrentStudentsPartial.cshtml
@@ -1,22 +1,22 @@
-@model EExamWebApp.ViewModels.CourseViewModel
-<h3>Current Students in Course</h3>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Email</th>
-    </tr>
-    </thead>
-    <tbody>
-    @if (Model.CurrentStudents != null)
-    {
-        foreach (var student in Model.CurrentStudents)
-        {
-            <tr>
-                <td>@student.Name @student.LastName</td>
-                <td>@student.Email</td>
-            </tr>
-        }
-    }
-    </tbody>
-</table>
+@* @model EExamWebApp.ViewModels.CourseViewModel *@
+@* <h3>Current Students in Course</h3> *@
+@* <table class="table"> *@
+@*     <thead> *@
+@*     <tr> *@
+@*         <th>Name</th> *@
+@*         <th>Email</th> *@
+@*     </tr> *@
+@*     </thead> *@
+@*     <tbody> *@
+@*     @if (Model.CurrentStudents != null) *@
+@*     { *@
+@*         foreach (var student in Model.CurrentStudents) *@
+@*         { *@
+@*             <tr> *@
+@*                 <td>@student.Name @student.LastName</td> *@
+@*                 <td>@student.Email</td> *@
+@*             </tr> *@
+@*         } *@
+@*     } *@
+@*     </tbody> *@
+@* </table> *@
