--- a/EExamWebApp/Views/Exams/Delete.cshtml
+++ b/EExamWebApp/Views/Exams/Delete.cshtml
@@ -60,7 +60,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default"/> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+            @Html.ActionLink("Back to List", "Index", "Exams", new{courseId=Model.CourseId})
+    </div>
     }
 </div>
