--- a/EExamWebApp/Views/Exams/Edit.cshtml
+++ b/EExamWebApp/Views/Exams/Edit.cshtml
@@ -67,7 +67,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index" , new {courseId= Model.CourseId})
 </div>
 
 @section Scripts {
